# MCPyLib

./: .gitignore  Expectation.md  LICENSE  README.md  example.py  example_advanced.py
MCPyLib/: README.md  performance_results.txt  pyproject.toml
MCPyLib/src/mcpylib/: __init__.py  client.py
ServerPlugin/: README.md  pom.xml
ServerPlugin/src/main/java/com/mcpylib/plugin/: ClientHandler.java  CommandHandler.java  CommandResult.java  MCPyLibCommand.java  MCPyLibPlugin.java  NetworkServer.java  TokenManager.java
ServerPlugin/src/main/resources/: config.yml  plugin.yml
docs/: api-reference.md  development.md  installation.md  protocol.md
examples/: .env.example  example.py  example_advanced.py  example_build_Maze.py
examples/basics/: 01_getting_started.py  02_block_states_and_nbt.py  03_entity_control.py
examples/benchmarks/: .env.example
examples/buildings/: build_cabin.py  build_maze.py  build_structures.py
examples/games/: sand_cache_game.py
examples/performance_test/: fill_vs_edit.py
